Sprawdzaj uprawnienia do przeglądania jakichkolwiek użytkowników/group/jednostek

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -11,14 +11,16 @@
         <li class="dropdown <%= menu_active?(:administration_dropdown) %>">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Administracja <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <% if current_user != nil && current_user.can_manage_any_user %><li class="<%= menu_active?(:users) %>"> <%= link_to "Użytkownicy", users_path %> </li><% end %>
-            <li class="<%= menu_active?(:units) %>"> <%= link_to "Drużyny", units_path %> </li>
-            <li class="<%= menu_active?(:groups) %>"> <%= link_to "Grupy", groups_path %> </li>
-            <li class="divider"></li>
-            <% if can? :manage, Journal %><li class="<%= menu_active?(:journals) %>"> <%= link_to "Książki", journals_path %> </li><% end %>
-            <% if can? :manage, JournalType %><li class="<%= menu_active?(:journal_types) %>"> <%= link_to "Rodzaje książek", journal_types_path %> </li><% end %>
-            <% if can? :manage, Category %><li class="<%= menu_active?(:categories) %>"> <%= link_to "Plan kont", categories_path %> </li><% end %>
-            <% if can? :manage, InventorySource %><li class="<%= menu_active?(:inventory_sources) %>"> <%= link_to "Źródła inwentarza", inventory_sources_path %> </li><% end %>
+            <% if current_user.can_manage_any_user %><li class="<%= menu_active?(:users) %>"> <%= link_to "Użytkownicy", users_path %> </li><% end %>
+            <% if current_user.can_manage_any_unit %><li class="<%= menu_active?(:units) %>"> <%= link_to "Drużyny", units_path %> </li><% end %>
+            <% if current_user.can_manage_any_group %><li class="<%= menu_active?(:groups) %>"> <%= link_to "Grupy", groups_path %> </li><% end %>
+            <% if can? :manage, Journal or can? :manage, JournalType or can? :manage, Category or can? :manage, InventorySource %>
+                <li class="divider"></li>
+                <% if can? :manage, Journal %><li class="<%= menu_active?(:journals) %>"> <%= link_to "Książki", journals_path %> </li><% end %>
+                <% if can? :manage, JournalType %><li class="<%= menu_active?(:journal_types) %>"> <%= link_to "Rodzaje książek", journal_types_path %> </li><% end %>
+                <% if can? :manage, Category %><li class="<%= menu_active?(:categories) %>"> <%= link_to "Plan kont", categories_path %> </li><% end %>
+                <% if can? :manage, InventorySource %><li class="<%= menu_active?(:inventory_sources) %>"> <%= link_to "Źródła inwentarza", inventory_sources_path %> </li><% end %>
+            <% end %>
           </ul>
         </li>
       <% end %>
