--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -1,12 +1,18 @@
+<script type="text/javascript">
+  function reloadForYear(year) {
+    document.location.href = "<%= units_path %>?year=" + year;
+  }
+</script>
+
 <h1>Drużyny</h1>
 
 <table class="table table-condensed top-buffer-20">
   <tr>
     <th class="name-cell" rowspan="3">Nazwa</th>
     <th colspan="4">Saldo początkowe
-      <select class="span1 no-margin">
+      <select class="span1 no-margin" onchange="reloadForYear(this.value)">
           <% @years.each do |year| %>
-              <option value="<%= year %>" <%= year == session[:current_year] ? "selected='selected'" : "" %>><%= year %></option>
+              <option value="<%= year %>" <%= year.to_s == @selected_year.to_s ? 'selected=selected' : '' %>><%= year %></option>
           <% end %>
       </select>
     </th>
@@ -28,10 +34,10 @@
 <% @units.each do |unit| %>
   <tr>
     <td><%= unit.name %></td>
+    <td class="amount-cell"><%= unit.finance_balance(@selected_year) || '-' %></td>
     <td class="amount-cell">-</td>
-      <td class="amount-cell">-</td>
-      <td class="amount-cell">-</td>
-      <td class="amount-cell">-</td>
+    <td class="amount-cell">-</td>
+    <td class="amount-cell">-</td>
     <td class="action-cell"><%= link_to 'Pokaż', unit %></td>
     <td class="action-cell"><%= link_to 'Edytuj', edit_unit_path(unit) %></td>
     <td class="action-cell"><%= link_to 'Usuń', unit, confirm: 'Na pewno usunąć drużynę?', method: :delete %></td>
