--- a/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/app/views/devise/mailer/invitation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Droga posiadaczko i drogi posiadaczu adresu e-mail <%= @resource.email %>!</p>
+<p>Droga posiadaczko, drogi posiadaczu adresu email <%= @resource.email %>!</p>
 
 <p>Ta wiadomość jest zaproszeniem do aplikacji ZiHeR znajdującej się pod adresem <%= root_url %>. Aby zaakceptować zaproszenie, kliknij w link poniżej:</p>
 
