--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -12,9 +12,19 @@
             <i class="icon-minus"></i>&nbsp;&nbsp;Nowy wydatek
           <% end %>
         <% end %>
+        <% if can? :close, @journal %>
+          <%= link_to close_journal_path, class: 'btn btn-small btn-danger' do%>
+            Zamknij książkę
+          <% end %>
+        <% end %>
       </small>
     <% else %>
-      <span class="label label-important">Książka zamknięta</span>
+      <span class="label label-info">Książka zamknięta</span>
+      <% if can? :open, @journal %>
+        <%= link_to open_journal_path, class: 'btn btn-small btn-danger' do%>
+          Otwórz książkę
+        <% end %>
+      <% end %>
     <% end %>
   </div>
   <div class="span6">
