Nie wyświetlaj w stopce nazwy commita

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="well well-small" style="margin-top: 60px">
   <div class="span3 text-left">
-    <b><a href="http://ziher.zhr.pl/beta">ZiHeR</a></b> - wersja <a href="https://github.com/zhr/ziher/commit/<%= VERSION[3] %>"><%= ApplicationController::ZIHER_VERSION %></a>
+    <b><a href="http://ziher.zhr.pl/beta">ZiHeR</a></b> - wersja <a href="https://github.com/zhr/ziher/commit/<%= ApplicationController::ZIHER_COMMIT %>"><%= ApplicationController::ZIHER_VERSION %></a>
   </div>
   <div class="span3 offset1 text-center">
     <a href="http://www.zhr.pl">Związek Harcerstwa Rzeczypospolitej</a>
