--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -8,6 +8,16 @@
         <li class="<%= menu_active?(:journal_bank) %>"><%= link_to "Książka bankowa", default_bank_journal_path %></li>
 
         <li class="<%= menu_active?(:inventory) %>"> <%= link_to "Książka inwentarzowa", inventory_entries_path %> </li>
+
+        <% if current_user.is_superadmin %>
+          <li class="dropdown <%= menu_active?(:reports_dropdown) %>">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Raporty <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li class="<%= menu_active?(:reports) %>"> <%= link_to "Spis z natury", fixed_assets_report_path %> </li>
+            </ul>
+          </li>
+        <% end %>
+
         <li class="dropdown <%= menu_active?(:administration_dropdown) %>">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Administracja <b class="caret"></b></a>
           <ul class="dropdown-menu">
