--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -8,6 +8,7 @@
 
 <table class="table table-condensed top-buffer-20">
   <tr>
+    <th rowspan="3">Kod</th>
     <th class="name-cell" rowspan="3">Nazwa</th>
     <th colspan="4">Saldo początkowe
       <select class="span1 no-margin" onchange="reloadForYear(this.value)">
@@ -33,6 +34,7 @@
 
 <% @units.each do |unit| %>
   <tr>
+    <td><%= unit.code %></td>
     <td><%= unit.name %></td>
     <td class="amount-cell"><%= unit.initial_finance_balance(@selected_year) || '-' %></td>
     <td class="amount-cell"><%= unit.initial_finance_balance_one_percent(@selected_year) || '-' %></td>
