#44 Dodany opis do wpisów książki inwentarzowej

--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -41,6 +41,10 @@
         <%= f.label :numer_inwentarzowy %>
         <%= f.text_field :stock_number %>
       </div>
+      <div class="field">
+        <%= f.label :opis %>
+        <%= f.text_field :description %>
+      </div>
       <div class="actions">
         <%= f.submit "Zapisz"%>
       </div>
