--- a/app/views/inventory_entries/index.html.erb
+++ b/app/views/inventory_entries/index.html.erb
@@ -30,6 +30,7 @@
     <th colspan="2" class="text-center">Ilość</th>
     <th rowspan="2" class="valign_middle">Cena jednostkowa</th>
     <th rowspan="2" class="valign_middle">Wartość</th>
+    <th rowspan="2" class="valign_middle">Opis</th>
     <th rowspan="2"></th>
     <th rowspan="2"></th>
   </tr>
@@ -38,7 +39,7 @@
     <th>Przychód</th>
     <th>Rozchód</th>
   </tr>
-
+    
 <% @inventory_entries.each do |inventory_entry| %>
   <tr>
     <td><%= inventory_entry.date %></td>
@@ -50,6 +51,7 @@
     <td><%= inventory_entry.is_expense ? inventory_entry.amount : '-' %></td>
     <td><%= inventory_entry.total_value / inventory_entry.amount %></td>
     <td><%= inventory_entry.total_value * (inventory_entry.is_expense ? -1 : 1)  %></td>
+    <td><%= inventory_entry.description %></td>
     <td><%= link_to 'Edytuj', edit_inventory_entry_path(inventory_entry) %></td>
     <td><%= link_to 'Usuń', inventory_entry, confirm: 'Na pewno usunąć wpis?', method: :delete %></td>
   </tr>
