#44 Zabawy z komentarzami do wpisów książki inwentarzowej - zamiast pola 'comment' i dodatkowo jeszcze 'description' będzie pole 'remark'

--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -43,7 +43,7 @@
       </div>
       <div class="field">
         <%= f.label :opis %>
-        <%= f.text_field :description %>
+        <%= f.text_field :remark %>
       </div>
       <div class="actions">
         <%= f.submit "Zapisz"%>
