--- a/app/views/inventory_entries/show.html.erb
+++ b/app/views/inventory_entries/show.html.erb
@@ -37,7 +37,7 @@
 
 <p>
     <b>Opis:</b>
-    <%= @inventory_entry.description %>
+    <%= @inventory_entry.remark %>
 </p>
 
 <%= link_to 'Edytuj', edit_inventory_entry_path(@inventory_entry) %> |
