--- a/app/views/inventory_entries/fixed_assets_report.csv.erb
+++ b/app/views/inventory_entries/fixed_assets_report.csv.erb
@@ -11,9 +11,9 @@ concat "Data\tNumer inwentarzowy\tNazwa\tNumer dokumentu\tŹródło\tPrzychód\t
   expense = inventory_entry.is_expense ? inventory_entry.amount : '0'
   item_value = inventory_entry.total_value / inventory_entry.amount
   value = inventory_entry.total_value * (inventory_entry.is_expense ? -1 : 1)
-  description = inventory_entry.description
+  remark = inventory_entry.remark
   unit = inventory_entry.unit.name
 
-  concat "\n#{date}\t#{stock}\t#{name}\t#{document}\t#{source}\t#{revenue}\t#{expense}\t#{item_value}\t#{value}\t#{description}\t#{unit}".html_safe
+  concat "\n#{date}\t#{stock}\t#{name}\t#{document}\t#{source}\t#{revenue}\t#{expense}\t#{item_value}\t#{value}\t#{remark}\t#{unit}".html_safe
 end
 %>
