--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -53,7 +53,7 @@
     </div>
 
     <!%-- przenoszenie kwot miedzy ksiazkami na razie wstrzymane --%>
-    <% if false and @entry.is_expense %>
+    <% if false && @entry.is_expense %>
       <div class="span6">
         <%= check_box_tag :is_linked, :is_linked, @linked_entry.id, :onclick => "showOrHideLinkedEntry()" %>
         <label for="is_linked">Przenieś do innej książki</label>
