--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>Możesz potwierdzić swój adres email klikając w poniższy link:</p>
 
-<p><%= link_to 'Potwierdź mój adres email', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
+<p><%= link_to 'Potwierdź mój adres email', confirmation_url(@resource, :confirmation_token => @token) %></p>
 
 <p>Czuwaj!</p>
 
