--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>Przesyłamy Ci link do zmiany Twojego hasła do aplikacji ZiHeR. Możesz je zmienić klikając poniżej:</p>
 
-<p><%= link_to 'Zmień moje hasło', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p><%= link_to 'Zmień moje hasło', edit_password_url(@resource, :reset_password_token => @token) %></p>
 
 <p>Jeżeli to nie Ty chcesz zmienić hasło, proszę zignoruj ten email.</p>
 <p>Twoje hasło nie zostanie zmienione dopóki nie użyjesz powyższego linka i nie stworzysz nowego hasła.</p>
