--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -4,7 +4,7 @@
 
 <p>Użyj linka poniżej aby odblokować swoje konto:</p>
 
-<p><%= link_to 'Odblokuj moje konto', unlock_url(@resource, :unlock_token => @resource.unlock_token) %></p>
+<p><%= link_to 'Odblokuj moje konto', unlock_url(@resource, :unlock_token => @token) %></p>
 
 <p>Czuwaj!</p>
 
