--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,41 +1,47 @@
-<h2><%= t "devise.registrations.edit.header" %></h2>
+<h2><%= t "devise.registrations.edit.title" %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email %>
+  <div class="well">
+    <div class="field">
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+    </div>
+
+    <div class="field">
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name %>
+    </div>
+
+    <div class="field">
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name %>
+    </div>
+
+    <div class="field">
+      <%= f.label :phone %>
+      <%= f.text_field :phone %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+  <div class="well">
+    <div class="field">
+      <%= f.label :password %> <i><%= t "devise.registrations.edit.new_password_info" %></i><br/>
+      <%= f.password_field :password, :autocomplete => "off" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :phone %>
-    <%= f.text_field :phone %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %> <i><%= t "devise.registrations.edit.new_password_info" %></i><br/>
-    <%= f.password_field :password, :autocomplete => "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i><%= t "devise.registrations.edit.current_password_info" %></i><br/>
-    <%= f.password_field :current_password %>
+  <div class="well">
+    <div class="field">
+      <%= f.label :current_password %> <i><%= t "devise.registrations.edit.current_password_info" %></i><br/>
+      <%= f.password_field :current_password %>
+    </div>
   </div>
 
   <div><%= f.submit t "devise.registrations.edit.submit_button" %></div>
